직접 돌려서 확인한 문서 결함 15건을 고친다
검증 에이전트 둘이 올린 것을 전부 재현해서 확인했다. 그중 하나는 오탐이라
버렸다 — super__vs__this.md 의 `// 5.5` 는 바로 아래에서 문서가 스스로
"주석의 5.5 는 틀렸다. 실제로는 6.75" 라고 정정하고 있다.

## Java (JDK 21·11 로 실행해 대조)

Code_Point.md 네 곳. `"안녕😀"` 는 char 4개인데 주석이 5라고 적었고,
`codePointAt(4)` 는 길이를 넘어 예외가 난다(이모지는 인덱스 2다).
`isWhitespace('　')` 는 false 가 아니라 true 다. 그리고 산문이
"isWhitespace 는 ASCII 공백류만" 이라 했는데 실제로는 교차 관계다 —
탭·개행은 isWhitespace 만 true, NBSP·U+2007 은 isSpaceChar 만 true 다.
6행짜리 표로 갈음했다.

record 정식 도입은 Java 14 가 아니라 **16** 이다. `javac --release 14/15`
는 `records are not supported`, 16 부터 통과한다. 같은 저장소
Advanced_Class.md:163 이 이미 맞게 적고 있어 내부 모순이었다.

PrintGCDetails 를 "삭제됨" 이라 적었는데 JDK 21 에서 **아직 동작한다** —
deprecated 경고를 내고 -Xlog:gc* 로 매핑된다. 실제로 제거된 건
PrintGCDateStamps 쪽이다(JDK 11 에서 Unrecognized VM option). 표와 산문을
둘로 갈랐다.

String.value 리플렉션이 "보안 관리자가 없으면 작동한다" 고 돼 있었는데
보안 관리자와 무관하다. JDK 17+ 는 모듈 강한 캡슐화로 막히고
--add-opens java.base/java.lang=ALL-UNNAMED 가 있어야 뚫린다.

## 설정 파일

YAML 중복 키 2건. 붙여넣으면 앞 블록이 통째로 사라지는 자리다.
- Saga: `stream:` 아래 `kafka:` 가 두 번이라 `binder.brokers` 가 날아간다
- 장애 격리: 최상위 `resilience4j:` 가 두 번인데, 하필 산문이 "반드시
  설정해야 한다" 고 못박은 `cancel-running-future: true` 가 사라지는 쪽에
  있다
합친 뒤 js-yaml 로 파싱해 잃었던 값이 전부 살아 있는지 확인했다.

nginx `listen ... ssl http2` 를 `listen ... ssl;` + `http2 on;` 으로
13줄(8파일) 바꿨다. 1.25.1 문법이고 옛 문법은 deprecated 경고가 뜬다.
저장소가 이미 5곳에서 이 변경을 산문으로 설명하고 있었는데 설정만 옛것이라
서로 어긋나 있었다. 성능_튜닝.md 의 http2_push·http2_push_preload 절은
같은 판에서 제거된 기능이라 통째로 걷어내고 왜 사라졌는지로 대체했다.
nginx 1.31.4 로 14개 블록 검사, http2 관련 경고 0.

Ansible.md:313 은 Packer HCL 이 ```json fence 안에 있었다.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PEZFPFWBW1qVZfcf2LvMZC